retrieve_ENO_DEV1/objects/Production_Role__c.object
<CustomObject>
    <description>All Roles Needed for this Production</description>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Production Roles</relationshipLabel>
        <relationshipName>Production_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Voice_Type__c</fullName>
        <label>Voice Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Voice_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Production Role</label>
    <nameField>
        <label>Production Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Production Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>